force-app/main/default/objects/LexisNexis_Integration__c/LexisNexis_Integration__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>LexisNexis_Integration</label>
</CustomObject>