force-app/main/default/objects/LexisNexis_Integration__c/fields/EndPointURL__c.field-meta.xml
<CustomField>
    <fullName>EndPointURL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EndPointURL</label>
    <type>Url</type>
</CustomField>