force-app/main/default/objects/LexisNexis_Integration__c/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Password</label>
    <length>50</length>
    <type>Text</type>
</CustomField>