force-app/main/default/objects/LexisNexis_Integration__c/fields/User_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>User Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>