force-app/main/default/objects/LexisNexis_Integration__c/fields/Workflow_Name__c.field-meta.xml
<CustomField>
    <fullName>Workflow_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Workflow Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>